--- a/BogoTaxi/BogoTaxi-Info.plist
+++ b/BogoTaxi/BogoTaxi-Info.plist
@@ -28,6 +28,10 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>league_gothic.ttf</string>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
