--- a/BogoTaxi/BogoTaxi-Info.plist
+++ b/BogoTaxi/BogoTaxi-Info.plist
@@ -14,11 +14,14 @@
 		<dict>
 			<key>CFBundleIconFiles</key>
 			<array>
-				<string>iconIphone@x2.png</string>
+				<string>iconiPhone@x2.png</string>
 				<string>iconiPhone.png</string>
 				<string>iconiPad@x2.png</string>
 				<string>iconiPad.png</string>
+				<string>iconiPhone@x2.png</string>
 			</array>
+			<key>UIPrerenderedIcon</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
@@ -45,6 +48,8 @@
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>MainStoryboard_iPad</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
