--- a/BogoTaxi/BogoTaxi-Info.plist
+++ b/BogoTaxi/BogoTaxi-Info.plist
@@ -44,6 +44,10 @@
 	<array>
 		<string>league_gothic.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard_iPhone</string>
 	<key>UIMainStoryboardFile~ipad</key>
